# openastro

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
common/: Makefile.am  advancedSettings.cc  advancedSettings.h  autorunSettings.cc  autorunSettings.h  camera.cc  camera.h  cameraSettings.cc  cameraSettings.h  captureSettings.cc  captureSettings.h  commonConfig.cc  commonConfig.h  commonState.cc  commonState.h  demosaicSettings.cc  demosaicSettings.h  filterSettings.cc  filterSettings.h  filterWheel.cc  filterWheel.h  fitsSettings.cc  fitsSettings.h  focusOverlay.cc  focusOverlay.h  generalSettings.cc  generalSettings.h  histogramSettings.cc  histogramSettings.h  histogramWidget.cc  histogramWidget.h  outputAVI.cc  outputAVI.h  outputDIB.cc  outputDIB.h  outputFFMPEG.cc  outputFFMPEG.h  outputFITS.cc  outputFITS.h  outputHandler.cc  (+24 more)
ext/: Makefile.am
ext/libdc1394/: aclocal.m4  config.h.in  configure  configure.ac
ext/libhidapi/: aclocal.m4  config.h.in  configure
ext/libusb/: config.h.in  configure
ext/libuvc/: CMakeLists.txt  Makefile.am  libuvc.pc
ext/libwindib/: Makefile.am  pipp_avi_write.cpp  pipp_avi_write.h  pipp_avi_write_dib.cpp  pipp_avi_write_dib.h  pipp_buffer.cpp  pipp_buffer.h  pipp_utf8.cpp  pipp_utf8.h  pipp_utf8_linux.cpp  pipp_video_write.h
liboaPTR/: Makefile.am  debug.c  oaptr.c  oaptrprivate.h  oaptrversion.h  ptr-acm.c  ptr-udev.c  ptr.h  ptrCallback.c  ptrConfig.c  ptrConnect-udev.c  ptrControl.c  ptrController.c  ptrIO-acm.c  ptrIO-udev.c  unimplemented.c  unimplemented.h  utils.c
liboacam/: Altaircallback.c  Altairconnect.c  Altaircontrol.c  Altaircontroller.c  AltairgetState.c  Altairoacam.c  Altairoacam.h  Altairroi.c  Altairstate.h  EUVCconnect.c  EUVCcontrol.c  EUVCcontroller.c  EUVCgetState.c  EUVCoacam.h  EUVCroi.c  EUVCstate.h  EUVCusb.h  IIDCcallback.c  IIDCconnect.c  IIDCcontrol.c  IIDCcontroller.c  IIDCgetState.c  IIDCoacam.h  IIDCstate.h  IMG132E.c  IMG132E.h  IMG132Econtroller.c  Makefile.am  Mallincamcallback.c  Mallincamconnect.c  Mallincamcontrol.c  Mallincamcontroller.c  MallincamgetState.c  Mallincamoacam.c  Mallincamoacam.h  Mallincamroi.c  Mallincamstate.h  PGE.h  PGEconnect.c  PGEcontrol.c  (+109 more)
liboacam/altair/: Altaircallback.c  Altairconnect.c  Altaircontrol.c  Altaircontroller.c  Altairdynloader.c  Altairoacam.c  Altairoacam.h  Altairprivate.h  Altairstate.h  Makefile.am  oacam.h  touptek-conf.h
liboacam/altair-legacy/: Altaircallback.c  Altairconnect.c  Altaircontrol.c  Altaircontroller.c  AltairgetState.c  Altairoacam.c  Altairoacam.h  Altairprivate.h  Altairroi.c  Altairstate.h  LegacyAltairDynloader.c  LegacyAltaircallback.c  LegacyAltairconnect.c  LegacyAltaircontrol.c  LegacyAltaircontroller.c  LegacyAltairgetState.c  LegacyAltairoacam.c  LegacyAltairoacam.h  LegacyAltairprivate.h  LegacyAltairroi.c  LegacyAltairstate.h  Makefile.am  oacam.h  touptek-conf.h
liboacam/aravis/: Makefile.am  aravisoacam.c  aravisoacam.h
liboacam/atik/: Makefile.am  atikSerialIO-ftdi.c  atikSerialIO-udev.c  atikSerialcallback.c  atikSerialconnect-ftdi.c  atikSerialconnect-libusb.c  atikSerialconnect-udev.c  atikSerialcontrol.c  atikSerialcontroller.c  atikSerialgetState.c  atikSerialoacam-ftdi.c  atikSerialoacam-libusb.c  atikSerialoacam-udev.c  atikSerialoacam.h  atikSerialstate.h
liboacam/bresser/: Makefile.am  oacam.h  touptek-conf.h
liboacam/demo/: Makefile.am  logging.c  setFrameFormat.c  setFrameSize.c  showControls.c  showFeatures.c  startStreaming.c  updateIntControl.c  updateMenuControl.c
liboacam/dummy/: Makefile.am  dummyCallback.c  dummyControl.c  dummyController.c  dummyGetState.c  dummyconnect.c  dummyoacam.c  dummyroi.c  (+2 more)
liboaephem/: Makefile.am  eccentricity.c  eccentricity.h  ephem.c  jupiter.c  jupiter.h  mars.c  mars.h  mercury.c  mercury.h  moon.c  moon.h  neptune.c  neptune.h  nonSSO.c  orbitalElements.c  orbitalElements.h  saturn.c  saturn.h  sun.c  sun.h  trig.c  trig.h  uranus.c  uranus.h  venus.c  venus.h
liboavideo/: Makefile.am  alpha.c  alpha.h  crop.c  fits.c  flip.c  formats.c  grey.c  grey.h  oavideo.c  rgb_to_grey.ods  tables.pl  test_oaconvert  test_oaconvert.c  test_oaconvert.txt  to8Bit.c  to8Bit.h  unpack.c  unpack.h  yuv.c  yuv.h  yuvlut.h
oacapture/: Makefile.am  advancedSettings.cc  autorunSettings.cc  autorunSettings.h  camera.cc  camera.h  cameraSettings.cc  cameraSettings.h  cameraWidget.cc  cameraWidget.h  captureSettings.cc  captureSettings.h  captureWidget.cc  captureWidget.h  configuration.h  controlWidget.cc  controlWidget.h  demosaicSettings.cc  demosaicSettings.h  displayWindow.cc  displayWindow.h  filterSettings.cc  filterWheel.cc  fitsSettings.cc  fitsSettings.h  focusOverlay.cc  focusOverlay.h  generalSettings.cc  generalSettings.h  histogramSettings.cc  histogramSettings.h  histogramWidget.cc  histogramWidget.h  imageWidget.cc  imageWidget.h  mainWindow.cc  mainWindow.h  oacapture.cc  oacapture.pro  oacapture.qrc  (+41 more)
oalive/: Makefile.am  advancedSettings.cc  advancedSettings.h  camera.cc  camera.h  cameraControls.cc  cameraControls.h  captureSettings.cc  captureSettings.h  configuration.h  controlsWidget.cc  controlsWidget.h  demosaicSettings.cc  demosaicSettings.h  filterSettings.cc  filterSettings.h  filterWheel.cc  filterWheel.h  fitsSettings.cc  focusOverlay.cc  focusOverlay.h  generalSettings.cc  generalSettings.h  mainWindow.cc  mainWindow.h  oalive.cc  oalive.qrc  outputFITS.cc  outputFITS.h  outputHandler.cc  outputHandler.h  outputPNG.cc  outputPNG.h  outputTIFF.cc  outputTIFF.h  processingControls.cc  processingControls.h  profileSettings.cc  profileSettings.h  qrc_oalive.cc  (+14 more)
osx/: Makefile.am  oaCapture.icns  oacapture.plist  oacapture.plist.in  oalive.icns  oalive.plist  oalive.plist.in
udev/: 52-PTR-2.rules  70-altair-cameras.rules  70-asi-cameras.rules  70-asi-fw.rules  70-atik.rules  70-celestron-camera.rules  70-iidc-cameras.rules  70-opticstar-cameras.rules  70-starlight-xpress.rules  70-tis-cameras-euvc.rules  70-tis-cameras-uvc.rules  70-tis-cameras.rules  70-touptek-cameras.rules  70-xagyl-ftdi.rules  85-qhy-cameras.rules  Makefile.am
(+480 files in other folders)
